[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-service"
version = "0.1.0"
description = "Async Azure OpenAI toolkit — structured output, agent pipelines, vision, token tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "neuravec"}]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["llm_service*"]
